fases: exploracion y preparacion de datos lista

--- a/tarea4.Rmd
+++ b/tarea4.Rmd
@@ -24,13 +24,16 @@ suppressWarnings(suppressMessages(library(stringr)))
 suppressWarnings(suppressMessages(library(rvest)))
 suppressWarnings(suppressMessages(library(FactoMineR)))
 suppressWarnings(suppressMessages(library(ggplot2)))
+suppressWarnings(suppressMessages(library(purrr)))
 ```
-# Modelo CRISP-DM
-
+# Clustering
+___
 ## Objetivos
 
 ### Negocio
-* Ejercicio Académico
+* Ejercicio Académico.
+
+>Construir clusters de los jugadores mas valiosos de la NBA segun su porcentaje de efectividad en tiros.
 
 ### Minería de Datos
 * Desarrollar un modelo utilizando reglas de clustering.
@@ -51,56 +54,127 @@ suppressWarnings(suppressMessages(library(ggplot2)))
 
 * ***Exploración de los datos: busque en Internet una página web con datos que sean de su interés. Los datos deben ser parte de lo que la página presenta, es decir, deben ser tablas, párrafos, etc. visibles al cargar la página.***
 
->Se ha decidido utilizar los datos de jugadores mas valiosos de la NBA (MVPs):
->[https://www.basketball-reference.com/awards/mvp.html](https://www.basketball-reference.com/awards/mvp.html)
+Se exploraran las siguientes dos paginas web para obtener la información correspondiendte:
 
+Lista de jugadores mas valiosos de la NBA (MVPs) segun la página oficial:
+[https://www.basketball-reference.com/awards/mvp.html](https://www.basketball-reference.com/awards/mvp.html)
+
+Lista de jugadores mas valiosos de la NBA (MVPs) segun la página wikipedia:
+[https://en.wikipedia.org/wiki/NBA_Most_Valuable_Player_Award](https://en.wikipedia.org/wiki/NBA_Most_Valuable_Player_Award)
+
+
+### Exploracion de datos
 ```{r}
-## exploracion de datos
-# Buscar informacion de wiki tambien, la pagina de la NBA esta muy limpia
-# https://en.wikipedia.org/wiki/NBA_Most_Valuable_Player_Award
-
-
-#leer los datos en formato html desde la pagina web
-pageURL<-'https://www.basketball-reference.com/awards/mvp.html'
-pageHTML<- read_html(pageURL,encoding = 'UTF-8')  
+#leer los datos en formato html desde las paginas web, Wiki Basketball MVP
+NBA_MVP_pageURL<-'https://www.basketball-reference.com/awards/mvp.html'
+Wiki_MVP_pageURL<-'https://en.wikipedia.org/wiki/NBA_Most_Valuable_Player_Award'
+nba_pageHTML<- read_html(NBA_MVP_pageURL,encoding = 'UTF-8')
+wiki_pageHTML<- read_html(Wiki_MVP_pageURL,encoding = 'UTF-8')
   
 #extraer las tablas del codigo html
-pageTables<- html_table(pageHTML,fill=TRUE)
-
-length(pageTables)
-#pageTables
+nba_pageTables<- html_table(nba_pageHTML,fill=TRUE)
+wiki_pageTables<- html_table(wiki_pageHTML,fill=TRUE)
 ```
-
+#### Exploracion de los datos de la pagina de NBA
+La pagina de NBA tiene: ```r length(nba_pageTables)``` tablas.  
+Los encabezados de las tablase de NBA son:
 ```{r}
-#agregar y almacenar las tablas de ganadores MVP de la NBA
-NBAWinners<- rbind(pageTables[[1]], pageTables[[2]])
-NBAWinners
-#almacenar las tablas de ganadores MVP de la ABA
-ABAWinners<- pageTables[[3]]
-ABAWinners
+#mostrar los encabezados de cada tabla
+str(nba_pageTables)
 ```
+
+> El resultado anterior muestra un claro error en los encabezados de las tablas. Tambien se deben unir las 2 primeras e ignorar/eliminar la tercera dado que no sera procesada.
+
+La cantidad de datos vacios en la tabla #1 es: ```r sum(nba_pageTables[[1]] == "")```  
+La cantidad de datos vacios en la tabla #2 es: ```r sum(nba_pageTables[[2]] == "")```
+
+> Esta cantidad de datos vacios nos indica que los datos deben den limpiarse antes de
+procesarse.
+
+#### Exploracion de los datos de la pagina de Wiki
+La pagina de Wiki tiene: ```r length(wiki_pageTables)``` tablas.  
+Los encabezados de las tablase de Wiki son:
+```{r}
+#mostrar los encabezados de cada tabla
+str(wiki_pageTables) 
+```
+
+> El resultado anterior nos muestra que los datos a extraer están en la tabla #6 y que sus ecabezados han sido extraidos correctamente.
+
+La cantidad de datos vacios en la tabla #6 es: ```r sum(wiki_pageTables[[6]] == "")```  
+> Esta cantidad de datos vacios nos indica una alta clalidad en los datos.
+
 
 ### Preparación de los datos
 
 * ***Seleccione los datos de su interés en la página previamente identificada.***
 ```{r}
-# seleccionar datos
+#agregar y almacenar las tablas #1 y #2 de la NBA
+nba_Table<- rbind(nba_pageTables[[1]], nba_pageTables[[2]])
+
+#seleccionar la primera fila como encabezados.
+names(nba_Table) <- nba_Table[1,]
+
+#almacenar la tabla #3 de la pagina de Wiki, no necesita cambios por el momento.
+wiki_Table<- wiki_pageTables[[6]]
+
+head(nba_Table)
+head(wiki_Table)
 ```
+> Segun la vista  anterior se observa que de la tabla NBA_table debe eliminarse la primera fila (pues contiene el encabezado). El mismo problema se presenta en la columna 66. También se nota que las columnas "lg" y "voting" no seran de utilizadas para hacer el clustering de la información. Serán removidas en la seguiente face.
+
+> Con respecto a la tabla wiki_table se observa que que deben ser removidos los cuantificadores de los nombres "(n)" de algunos nombres en la columna "Team". La columna "Player" tambien debe eliminarse porque estaría repetida en la tabla nba_table
 
 * ***Limpieza de los datos: limpie lo que sea necesario aplicando expresiones regulares.***
 ```{r}
-# limpiar datos
+#Eliminar las colmunas: "Lg", "Voting" del frame nba_Table, no aportan datos importantes, eliminar la columan Tm, se utilizara la del frame de wiki_Table.
+nba_Table$Lg <- NULL
+nba_Table$Voting <- NULL
+nba_Table$Tm <- NULL
+
+#eliminar las filas que contienen encabezados como datos (busca un encabezado dentro de los datos)
+nba_Table<- nba_Table[ grep("Season", nba_Table$Season, invert = TRUE) , ]
+
+head(nba_Table)
+
+#Eliminar las colmunas: "Player" del frame wiki_Table (ya está en la otra tabla) y Nationality (no será tomada en cuenta para el analisys)
+wiki_Table$Player <- NULL
+wiki_Table$Nationality <- NULL
+
+#limpiar los nombres de los equipos en la columna "Teams" utilizando expresiones regulares,
+#se elimina el nombre de la ciudad y se utiliza unicamente el nombre del equipo
+wiki_Table$Team <- str_match(wiki_Table$Team,'([a-zA-Z]+)(\\s*\\([0-9]+\\))?$')[,2]
+
+#reemplazar caracteres invalidos para "-" en el campo "Season". Sí, son diferentes.
+wiki_Table$Season <- str_replace(wiki_Table$Season,'\\–','\\-')
+
+head(wiki_Table)
 ```
 
 * ***Construcción de nuevos datos (atributos). Si no aplica, indíquelo. Si construye nuevas columnas o atributos, explique.***
+> En esta face se uniran los datos de ambas tablas por el campo "Season" que comparten ambas.
 ```{r}
-# construir nuevos datos
+# unir ambas tablas en una sola con todos los atributos.
+players_table <- merge(nba_Table,wiki_Table, by = "Season")
+
+#reorganizar la posicion de las columnas
+players_table<- players_table[c(1,2,3,17,16,4,5,6,7,8,9,10,11,12,13,14,15)]
+
+head(players_table)
+
 ```
 
 * ***Transformaciones aplicadas a los datos. Describa las transformaciones realizadas.***
 ```{r}
 # transformar datos
 
+#transformar las columnas a valores numericos a su correspondiente tipo.
+sapply(players_table, class) 
+numeric_columns <- c(3,6,7,8,9,10,11,12,13,14,15,16,17)
+players_table[ , numeric_columns] <- apply(players_table[ , numeric_columns], 2,  # Especifica la funcion en la llamada
+                    function(x) as.numeric(as.character(x)))
+sapply(players_table, class)
+head(players_table)
 
 # formar un DataFrame
 ```
