--- a/tarea4.Rmd
+++ b/tarea4.Rmd
@@ -3,8 +3,8 @@ title: "Tarea 4 - Mineria de Datos e Inteligencia de Negocios"
 author: "Jonathan Gonzalez, Gonzalo Rodriguez, Juan P. Villalobos"
 date: "05/17/2020"
 output:
+  # pdf_document: default
   html_document: default
-  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -18,6 +18,8 @@ knitr::opts_chunk$set(echo = TRUE)
 #install.packages(FactoMineR)
 #install.packages(ggplot2)
 
+options(repos="https://cran.rstudio.com" )
+
 # cargar librerias necesarias
 suppressWarnings(suppressMessages(library(tibble)))
 suppressWarnings(suppressMessages(library(stringr)))
@@ -26,17 +28,20 @@ suppressWarnings(suppressMessages(library(FactoMineR)))
 suppressWarnings(suppressMessages(library(ggplot2)))
 suppressWarnings(suppressMessages(library(purrr)))
 suppressWarnings(suppressMessages(library(dplyr)))
+suppressWarnings(suppressMessages(library(cluster)))
 suppressWarnings(suppressMessages(library(factoextra)))
+suppressWarnings(suppressMessages(library(knitr)))
+suppressWarnings(suppressMessages(library(fpc)))
 install.packages("foreign")
 ```
-# Clustering
+# Web Mining y Clustering
 ___
 ## Objetivos
 
 ### Negocio
 * Ejercicio Académico.
 
->Construir clusters de los jugadores mas valiosos de la NBA segun su porcentaje de efectividad en tiros.
+> Construir clusters de los jugadores mas valiosos de la NBA segun su porcentaje de efectividad en tiros.
 
 ### Minería de Datos
 * Desarrollar un modelo utilizando reglas de clustering.
@@ -53,20 +58,21 @@ ___
 
 * Aplicar los conceptos vistos en clase correctamente.
 
-### Entendimiento de los datos
+## Entendimiento de los datos
 
-* ***Exploración de los datos: busque en Internet una página web con datos que sean de su interés. Los datos deben ser parte de lo que la página presenta, es decir, deben ser tablas, párrafos, etc. visibles al cargar la página.***
+### Exploración de datos
 
-Se exploraran las siguientes dos paginas web para obtener la información correspondiendte:
+* ***Busque en Internet una página web con datos que sean de su interés. Los datos deben ser parte de lo que la página presenta, es decir, deben ser tablas, párrafos, etc. visibles al cargar la página.***
 
-Lista de jugadores mas valiosos de la NBA (MVPs) segun la página oficial:
+Para la presente tarea se utilizarán las siguientes páginas web:
+
+* Estadísticas de los jugadores mas valiosos de la NBA y ABA (MVPs) según Basketball Reference:
 [https://www.basketball-reference.com/awards/mvp.html](https://www.basketball-reference.com/awards/mvp.html)
 
-Lista de jugadores mas valiosos de la NBA (MVPs) segun la página wikipedia:
+* Información de jugadores mas valiosos de la NBA (MVPs) según Wikipedia:
 [https://en.wikipedia.org/wiki/NBA_Most_Valuable_Player_Award](https://en.wikipedia.org/wiki/NBA_Most_Valuable_Player_Award)
 
 
-### Exploracion de datos
 ```{r}
 #leer los datos en formato html desde las paginas web, Wiki Basketball MVP
 NBA_MVP_pageURL<-'https://www.basketball-reference.com/awards/mvp.html'
@@ -78,39 +84,42 @@ wiki_pageHTML<- read_html(Wiki_MVP_pageURL,encoding = 'UTF-8')
 nba_pageTables<- html_table(nba_pageHTML,fill=TRUE)
 wiki_pageTables<- html_table(wiki_pageHTML,fill=TRUE)
 ```
-#### Exploracion de los datos de la pagina de NBA
-La pagina de NBA tiene: ```r length(nba_pageTables)``` tablas.  
-Los encabezados de las tablase de NBA son:
+
+#### Exploración de datos de www.basketball-reference.com
+
+La página de Basketball Reference tiene: ```r length(nba_pageTables)``` tablas, cuyos encabezados son:
+
 ```{r}
 #mostrar los encabezados de cada tabla
 str(nba_pageTables)
 ```
 
-> El resultado anterior muestra un claro error en los encabezados de las tablas. Tambien se deben unir las 2 primeras e ignorar/eliminar la tercera dado que no sera procesada.
+> El resultado anterior muestra un error en los encabezados de las tablas debido al estilo del sitio web. Además se aprecia que las dos primeras tablas deben unirse y que, debido a estadísticas faltantes, procederemos a ignorar/eliminar la tercera para el ejercicio de clustering.
 
-La cantidad de datos vacios en la tabla #1 es: ```r sum(nba_pageTables[[1]] == "")```  
-La cantidad de datos vacios en la tabla #2 es: ```r sum(nba_pageTables[[2]] == "")```
+La cantidad de datos vacíos en la tabla #1 es: ```r sum(nba_pageTables[[1]] == "")```  
+La cantidad de datos vacíos en la tabla #2 es: ```r sum(nba_pageTables[[2]] == "")```
 
-> Esta cantidad de datos vacios nos indica que los datos deben den limpiarse antes de
-procesarse.
+> Esta cantidad de datos vacíos nos indica que los datos deben limpiarse un poco antes de ser procesados.
 
-#### Exploracion de los datos de la pagina de Wiki
-La pagina de Wiki tiene: ```r length(wiki_pageTables)``` tablas.  
-Los encabezados de las tablase de Wiki son:
+#### Exploración de datos de Wikipedia
+
+La página de NBA tiene: ```r length(wiki_pageTables)``` tablas, cuyos encabezados son:
+
 ```{r}
 #mostrar los encabezados de cada tabla
 str(wiki_pageTables) 
 ```
 
-> El resultado anterior nos muestra que los datos a extraer están en la tabla #6 y que sus ecabezados han sido extraidos correctamente.
+> El resultado anterior nos muestra que los datos a extraer están en la tabla número 6 y que sus encabezados no necesitan limpieza adicional.
 
 La cantidad de datos vacios en la tabla #6 es: ```r sum(wiki_pageTables[[6]] == "")```  
-> Esta cantidad de datos vacios nos indica una alta clalidad en los datos.
+
+> Esta cantidad de datos vacios nos indica una alta calidad en los datos.
 
 
 ### Preparación de los datos
 
-* ***Seleccione los datos de su interés en la página previamente identificada.***
+* ***Seleccione los datos de su interés en las páginas previamente identificadas.***
 ```{r}
 #agregar y almacenar la tablas #1 y #2 de la NBA
 nba_Table<- nba_pageTables[[1]]
@@ -121,90 +130,92 @@ names(nba_Table) <- nba_Table[1,]
 #almacenar la tabla #3 de la pagina de Wiki, no necesita cambios por el momento.
 wiki_Table<- wiki_pageTables[[6]]
 
-head(nba_Table)
-head(wiki_Table)
+kable(nba_Table)
+kable(wiki_Table)
 ```
-> Segun la vista  anterior se observa que de la tabla NBA_table debe eliminarse la primera fila (pues contiene el encabezado). También se nota que las columnas "lg" y "voting" no seran de utilizadas para hacer el clustering de la información. Serán removidas en la seguiente face.
 
-> Con respecto a la tabla wiki_table se observa que que deben ser removidos los cuantificadores de los nombres "(n)" de algunos nombres en la columna "Team". La columna "Player" tambien debe eliminarse porque estaría repetida en la tabla nba_table
 
 * ***Limpieza de los datos: limpie lo que sea necesario aplicando expresiones regulares.***
+
+> Según la vista  anterior se observa que de la tabla nba_table debe eliminarse la primera fila pues contiene el encabezado. También se decide que las columnas "lg" (el nombre de la liga) y "voting" (que es un enlace a otra página con el desglose de las votaciones por el MVP de la temporada) no serán utilizadas para hacer el clustering de la información. Serán removidas en la siguiente fase.
+
+> Con respecto a la tabla wiki_table se observa que que deben ser removidos los cuantificadores de los nombres "(n)" de algunos nombres en la columna "Team". La columna "Player" tambien debe eliminarse porque está duplicada en la tabla nba_table
+
 ```{r}
-#Eliminar las colmunas: "Lg", "Voting" del frame nba_Table, no aportan datos importantes, eliminar la columan Tm, se utilizara la del frame de wiki_Table.
+# Eliminar las colmunas: "Lg", "Voting" del frame nba_Table pues no aportan datos importantes. Además se elimina la columna Tm pues se utilizará el nombre del equipo extraído de Wikipedia.
 nba_Table$Lg <- NULL
 nba_Table$Voting <- NULL
 nba_Table$Tm <- NULL
 
-#eliminar las filas que contienen encabezados como datos (busca un encabezado dentro de los datos)
+# Eliminar las filas que contienen encabezados como datos (busca un encabezado dentro de los datos)
 nba_Table<- nba_Table[ grep("Season", nba_Table$Season, invert = TRUE) , ]
 
-head(nba_Table)
+kable(nba_Table)
 
-#Eliminar las colmunas: "Player" del frame wiki_Table (ya está en la otra tabla) y Nationality (no será tomada en cuenta para el analisys)
+# Eliminar las columnas: "Player" del frame wiki_Table (ya está en la otra tabla) y Nationality (no será tomada en cuenta para el análisis)
 wiki_Table$Player <- NULL
 wiki_Table$Nationality <- NULL
 
-#limpiar los nombres de los equipos en la columna "Teams" utilizando expresiones regulares,
-#se elimina el nombre de la ciudad y se utiliza unicamente el nombre del equipo
+# Limpiar los nombres de los equipos en la columna "Teams" utilizando expresiones regulares
+#   (se elimina el nombre de la ciudad y se utiliza unicamente el nombre del equipo)
 wiki_Table$Team <- str_match(wiki_Table$Team,'([a-zA-Z]+)(\\s*\\([0-9]+\\))?$')[,2]
 
-#reemplazar caracteres invalidos para "-" en el campo "Season". Sí, son diferentes.
+# Reemplazar caracteres invalidos para "-" en el campo "Season". (Sí, son diferentes).
 wiki_Table$Season <- str_replace(wiki_Table$Season,'\\–','\\-')
 
-head(wiki_Table)
+kable(wiki_Table)
 ```
 
 * ***Construcción de nuevos datos (atributos). Si no aplica, indíquelo. Si construye nuevas columnas o atributos, explique.***
-> En esta face se uniran los datos de ambas tablas por el campo "Season" que comparten ambas.
+
+> No se contruirán nuevos atributos, sin embargo en esta fase se unirán los datos de ambas páginas utilizando el campo común "Season".
+
 ```{r}
-# unir ambas tablas en una sola con todos los atributos.
+# Unir ambas tablas en una sola con todos los atributos.
 players_table <- merge(nba_Table,wiki_Table, by = "Season")
 
-#reorganizar la posicion de las columnas
+# Reorganizar la posición de las columnas para facilitar la visualización
 players_table<- players_table[c(1,2,3,17,16,4,5,6,7,8,9,10,11,12,13,14,15)]
 
-head(players_table)
+kable(players_table)
 
 ```
 
 * ***Transformaciones aplicadas a los datos. Describa las transformaciones realizadas.***
-```{r}
-# transformar datos
 
-#transformar las columnas a valores numericos a su correspondiente tipo.
+> Primero se aplica una transformación básica, mutar las columnas a valores numéricos. Luego se procede a eliminar las filas con valores vacíos: un total de 24 que comprenden aquellas temporadas previas a 1979-1980 cuando no se llevaba registro de estadísticas como robos, bloqueos y el tiro de 3 puntos no existía. Finalmente se normalizan las columnas numéricas para evitar que las diferencias en magnitudes perjudiquen el modelo.
+
+```{r}
+
+# Transformar las columnas con valores númericos a su correspondiente tipo.
 sapply(players_table, class)
 
 numeric_columns <- c(3,6,7,8,9,10,11,12,13,14,15,16,17)
 players_table[ , numeric_columns] <- apply(players_table[ , numeric_columns], 2,  # Especifica la funcion en la llamada
                                            function(x) as.numeric(as.character(x)))
 sapply(players_table, class)
-head(players_table)
+kable(players_table)
 
-# formar un DataFrame
-```
-```{r}
-#----------------------------
-# REVISAR OMIT - 24 rows menos
-#----------------------------
+# Eliminar filas con valores vacíos
 na_omitted <- na.omit(players_table) 
-na_omitted
+kable(na_omitted)
 
 # Normalizacion de los datos
 players_normal <- na_omitted %>% mutate_at(6:17, funs((. - mean(.))/sd(.)))
-head(players_normal)
+kable(players_normal)
 
 ```
 
+> Por último se reemplaza los nombres de las filas del dataframe por una combinación de las columnas Season, Player y Position para facilitar la lectura de los resultados. Una vez realizado este cambio esas columnas se eliminan.
 
 ```{r}
 players_normal$id <- paste(players_normal$Player,'(',players_normal$Season,')','-',players_normal$Position)
 players_ds<- players_normal[c(18,6,7,8,9,10,11,12,13,14,15,16,17)]
-head(players_ds)
-```
-```{r}
+kable(players_ds)
+
 rownames(players_ds) <- players_ds$id
 players_ds$id <- NULL
-players_ds
+kable(players_ds)
 
 ```
 
@@ -212,47 +223,45 @@ players_ds
 
 ***Para esta fase se le solicita que seleccione dos de los algoritmos de clustering vistos en clase, o bien ejecutar dos veces sólo uno de los algoritmos estudiados pero usando diferentes parámetros cada vez.***
 
-* ***Selecccion de técnicas***
+> Las técnicas a utilizar son k-means y LA OTRA
+
+#### Construcción de modelo k-means
+
+Los parámetros a utilizar son: k = 5 centroides: utilizando un poco de conocimiento previo de los datos, conscientes de que existen 5 posiciones diferentes en el baloncesto. nstart = 20 configuraciones iniciales: aprovechando el modesto tamaño del set de datos.
+    
 ```{r}
-# seleccion de tecnicas
 
+# ejecución del algoritmo kmeans con los parámetros elegidos
+clusters <- kmeans(players_ds,5,nstart=20)
+
+# obtener cantidad de registros en cada cluster y los centroides
+descClusters<- data.frame(clusters$size,clusters$centers)
+kable(descClusters)
+
+# crear un data frame combinando el cluster asignado y los atributos originales
+resultado <- data.frame(clusters$cluster,players_ds)
+names(resultado)[1] <- "cluster"
+kable(resultado[order(resultado$cluster),])
 ```  
-* ***Construcción de cada modelo***
-    * ***Selección de los parametros***   
-    ```{r}
-    # seleccion de los parametros
     
-    # ejecución del algoritmo kmeans con k =3
-    clusters <- kmeans(players_ds,5,nstart=20)
+* ***Descripción del modelo obtenido (incluya al menos un gráfico por modelo)***
 
-    #obtener cantidad de registros en cada cluster y los centroides
-    descClusters<- data.frame(clusters$size,clusters$centers)
-    descClusters
-    
-    # crear un data frame combinando el cluster asignado y los atributos originales
-    
-    resultado <- data.frame(clusters$cluster,players_ds)
-    
-    head(resultado,50)
-    ```  
-    * ***Ejecución***  
-    ```{r}
-    # ejecucion
-    ```  
-    * ***Descripción del modelo obtenido (incluya al menos un gráfico por modelo)***
-    ```{r}
-    # modelo obtenido
+```{r}
+# modelo obtenido
 
-    # grafico modelo #1
-    # construir un grafico
-    ggplot(players_ds,
-           aes(PTS,BLK,
-               color = clusters$cluster)) + geom_point()+ ggtitle(label='Distribución por cluster')
-    
-    # otra forma de visualizar los clusters
-    fviz_cluster(clusters,data=players_ds[,c(1,2)],palette='jco',ggtheme = theme_minimal())
-    # grafico modelo #2
-    ```  
+# grafico modelo #1
+
+plotcluster(players_ds, clusters$cluster)
+
+# construir un grafico
+ggplot(players_ds,
+     aes(PTS,BLK,
+         color = clusters$cluster)) + geom_point()+ ggtitle(label='Distribución por cluster')
+
+# otra forma de visualizar los clusters
+fviz_cluster(clusters,data=players_ds[,c(1,2)],palette='jco',ggtheme = theme_minimal())
+# grafico modelo #2
+```  
 * ***Evaluación de los modelos***
     * ***Compare los resultados obtenidos con cada modelo***  
     ```{r}
